--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,11 @@
-<div>
-
-</div>
+<main class="container">
+  <section class="row align-items-center">
+    <div class="col"></div>
+    <div class="col">
+      <img class='row main_img' src="images/beer.png" alt="Beer">
+      <a href="/beers" type="button" class="btn btn-primary btn-lg">Check the Beers!</a>
+      <a href="/random-beer" type="button" class="btn btn-primary btn-lg">Check a random Beer</a>
+    </div>
+    <div class="col"></div>
+  </section>
+</main>
